delete useless