@@ -1,64 +1,63 @@
 plugins {
-  id 'java'
-  id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
+    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.beryx.jlink' version '2.26.0'
 }
 
-group 'org.main'
-version '1.0-SNAPSHOT'
+group = 'org.main.snake_game'
+version = '1.0-SNAPSHOT'
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
-ext {
-  junitVersion = '5.10.2'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+    withSourcesJar()
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
-
-tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
+tasks.named('compileJava') {
+    options.encoding = 'UTF-8'
 }
 
 application {
-  mainModule = 'org.main.task_2_3_1'
-  mainClass = 'org.main.task_2_3_1.Main'
+    mainClass = 'org.main.snake_game.Main'
+    mainModule = 'org.main.snake_game'
 }
 
 javafx {
-  version = '21'
-  modules = ['javafx.controls', 'javafx.fxml']
+    version = '21'
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
-  implementation 'org.openjfx:javafx-controls:21'
-  implementation 'org.openjfx:javafx-fxml:21'
-  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    implementation('org.controlsfx:controlsfx:11.2.1') {
+        exclude(group: 'org.openjfx')
+    }
+    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
+
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.10.2')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.10.2')
 }
 
-tasks.withType(JavaExec) {
-  jvmArgs = [
-          "--module-path", classpath.asPath,
-          "--add-modules", "javafx.controls,javafx.fxml"
-  ]
+tasks.named('test') {
+    useJUnitPlatform()
 }
-
-test {
-useJUnitPlatform()}
 
 jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-  launcher {
-    name = 'app'
-  }
-}
+    imageZip = layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip").get().asFile
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'snake-game'
+        jvmArgs = ['-Dfile.encoding=UTF-8']
+    }
 
-jlinkZip {
-  group = 'distribution'
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser']
+        }
+    }
 }
